packages/cashc/test/compiler/ParseError/non_existent_date.cash
pragma cashscript ^0.7.0;

contract Test() {
    function test() {
        require(tx.time >= date("2021-50-03T05:30:00"));
    }
}
